--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'AP'
 - !lcsh 'Children''s periodicals, American'
+- GITenberg
 title: 'The Youth''s Companion
 
   Volume LII, Number 11, Thursday, March 13, 1879'
